[metadata]
name = attr: postDB.__title__
author = attr: postDB.__title__
version = attr: postDB.__version__
home-page = https://github.com/SylteA/postDB
description = A WIP asynchronous database module for PostgreSQL databases.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
project_urls =
    Bug Tracker = https://github.com/SylteA/postDB/issues
    Codebase = https://github.com/SylteA/postDB

[options]
packages = postDB
python_requires = >= 3.6
setup_requires =
    setuptools
install_requires =
    asyncpg

[options.extras_require]
dev =
    black
